--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Spa Application</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="menu_home">Home</string>
+    <string name="menu_history">History</string>
+    <string name="menu_qr">QR</string>
+    <string name="menu_coin">Promotion</string>
+    <string name="menu_account">Account</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
